# BolsaAveiro

./: .gitignore  README.md  benchmark.py  gui-main.py  main.py  setup.cfg  testTime.txt
InputFiles/: BioExample.txt  allPrograms.txt
Interval/: Errors.py  Interpreter.py  Nodes.py  Parser.py  RunProgram.py  Tasks.txt  Translator.py  conf.py  grammar.txt
Interval/Deprecated/: GInterfaceOld.py  Nodes.py  basic2.py  shell2.py
Interval/Docs/: Makefile
Interval/GraphicalInterface/: BasicTranslation.py  BasicTranslationFrame.py  FileFrame.py  GInterface.py  HistoryFrame.py  HistoryNotepage.py  NotePage.py  Tools.py
Interval/InputFiles/: GUItest.txt  allPrograms.txt  examples.txt  program.txt
OutputFiles/: IntroExample.kyx
Parser/: Errors.py  Interpreter.py  Lexer.py  Parser.py  Tasks.txt  basic.py  basic2.py  grammar.txt  main.py  shell.py
Parser/Deprecated/: OldParser.py  ParseResult.py  basic.py  basic3.py
Parser/Docs/: winmake.bat
Parser/Interval/: Errors.py  GInterface.py  Interface.py  Interpreter.py  (+13 more)
core/: Errors.py  Interpreter.py  Lexer.py  Nodes.py  Parser.py  Parser2.py  RunProgram.py  Tokens.py  Translator.py
docs/: CNAME  Interpreter.html  Tokens.html  index.html  objects.inv  search.html
gui/: BasicTranslationFrame.py  FileFrame.py  HistoryFrame.py  HistoryNotepage.py  IntervalInterface.py  NotePage.py  Tools.py
idDL2DL/: gui-main.py
iddl/: Interpreter.py  Lexer.py  Nodes.py  Parser.py  RunProgram.py  Tokens.py  Translator.py
iddl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_Interpreter.py  test_Translator.py
(+32 files in other folders)
