[metadata]
name = iddl
version = 0.0.1
author = Jaime
author_email = jaimepereirasantos123@gmail.com
description = iddl
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True